# X-GOD-ORM-APP

./: README.md  main.py  pyproject.toml
db/: filler.py  models.py  queries.py
db/models/: __init__.py
