[tool.poetry]
name = "x-god-orm-app"
version = "0.1.0"
description = ""
authors = ["Rustam <rustamelutingol@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
peewee = "^3.13.1"
peewee_migrate2 = "^1.3.0"
pyqt5 = "^5.14.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
